welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:14: error: value avance is not a member of Unit
	 case "Z" => avance();avance();avance()avance();avance();avance()
                                               ^